compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__extract_variable_in_case_branch.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "public fn main() {\n    case wibble {\n      _ -> [1, 2, 3]\n    }\n}"
snapshot_kind: text
---
----- BEFORE ACTION
public fn main() {
    case wibble {
      _ -> [1, 2, 3]
           ↑        
    }
}


----- AFTER ACTION
public fn main() {
    case wibble {
      _ -> {
        let ints = [1, 2, 3]
        ints
      }
    }
}
