compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__extract_variable_in_case_branch_from_second_arg.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "public fn main() {\n  case todo {\n    Ok(_) -> #(Ok(1), Error(\"s\"))\n    Error(_) -> panic\n  }\n}"
snapshot_kind: text
---
----- BEFORE ACTION
public fn main() {
  case todo {
    Ok(_) -> #(Ok(1), Error("s"))
                      ↑          
    Error(_) -> panic
  }
}


----- AFTER ACTION
public fn main() {
  case todo {
    Ok(_) -> {
      let result = Error("s")
      #(Ok(1), result)
    }
    Error(_) -> panic
  }
}
