compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__extract_variable_in_case_branch_using_var.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "public fn main() {\n  case todo {\n    Ok(value) -> 2 * value + 1\n    Error(_) -> panic\n  }\n}"
snapshot_kind: text
---
----- BEFORE ACTION
public fn main() {
  case todo {
    Ok(value) -> 2 * value + 1
                 ▔▔▔▔↑        
    Error(_) -> panic
  }
}


----- AFTER ACTION
public fn main() {
  case todo {
    Ok(value) -> {
      let int = 2 * value
      int + 1
    }
    Error(_) -> panic
  }
}
