compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__extract_variable_in_multiline_case_subject_branch.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "public fn main() {\n    case\n        list.map(\n          [1, 2, 3],\n          int.add(1, _)\n        )\n    {\n      _ -> todo\n    }\n}"
snapshot_kind: text
---
----- BEFORE ACTION
public fn main() {
    case
        list.map(
          [1, 2, 3],
          ↑         
          int.add(1, _)
        )
    {
      _ -> todo
    }
}


----- AFTER ACTION
public fn main() {
    let ints = [1, 2, 3]
    case
        list.map(
          ints,
          int.add(1, _)
        )
    {
      _ -> todo
    }
}
