compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__extract_variable_in_use.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "public fn main() {\n    use <- wibble([1, 2, 3])\n    todo\n}"
snapshot_kind: text
---
----- BEFORE ACTION
public fn main() {
    use <- wibble([1, 2, 3])
                  ↑         
    todo
}


----- AFTER ACTION
public fn main() {
    let ints = [1, 2, 3]
    use <- wibble(ints)
    todo
}
