compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__extract_variable_inside_multiline_function_call.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "public fn main() {\n  list.map(\n    [1, 2, 3],\n    int.add(1, _),\n  )\n}"
snapshot_kind: text
---
----- BEFORE ACTION
public fn main() {
  list.map(
    [1, 2, 3],
    ↑         
    int.add(1, _),
  )
}


----- AFTER ACTION
public fn main() {
  let ints = [1, 2, 3]
  list.map(
    ints,
    int.add(1, _),
  )
}
