compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__extract_variable_inside_use_body.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "public fn main() {\n    use <- wibble(todo)\n    list.map([1, 2, 3], int.add(1, _))\n    todo\n}"
snapshot_kind: text
---
----- BEFORE ACTION
public fn main() {
    use <- wibble(todo)
    list.map([1, 2, 3], int.add(1, _))
             ↑                        
    todo
}


----- AFTER ACTION
public fn main() {
    use <- wibble(todo)
    let ints = [1, 2, 3]
    list.map(ints, int.add(1, _))
    todo
}
