compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__fallback_to_split_string_when_selecting_invalid_name.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "public fn main() {\n  \"wibble wobble woo woo\"\n}"
snapshot_kind: text
---
----- BEFORE ACTION
public fn main() {
  "wibble wobble woo woo"
          ▔▔▔▔▔▔▔▔▔▔↑    
}


----- AFTER ACTION
public fn main() {
  "wibble wobble woo" <> todo <> " woo"
}
